--- a/src/AppBundle/Resources/views/Home/showUser.html.twig
+++ b/src/AppBundle/Resources/views/Home/showUser.html.twig
@@ -30,6 +30,11 @@
         {% endif %}
     </h4>
 
+    {{ form_start(weightForm) }}
+        {{ form_errors(weightForm) }}
+        {{ form_row(weightForm.weight) }}
+    {{ form_end(weightForm) }}
+
     {% block graph %}
         <canvas id="myChart" width="400" height="400"></canvas>
     {% endblock %}
