search bar update

--- a/app/Resources/style/pageStyle.css
+++ b/app/Resources/style/pageStyle.css
@@ -119,6 +119,7 @@ input[type=text] {
     background-repeat: no-repeat;
     background-position: 10px 10px;
     padding-left: 40px;
+	width: 100%;
 }
 
 input[type=text]:focus {
