--- a/app/Resources/style/style.css
+++ b/app/Resources/style/style.css
@@ -518,3 +518,11 @@ select
 {
     background-color: orange;
 }
+
+.title
+{
+    font-family: Oswald;
+    font-size: 50px;
+    text-align: center;
+    color: white;
+}
