scrollspy on created workouts

--- a/app/Resources/style/style.css
+++ b/app/Resources/style/style.css
@@ -526,3 +526,16 @@ select
     text-align: center;
     color: white;
 }
+
+.rateInfo
+{
+    color:white;
+    font-family: Oswald;
+    font-weight: 700;
+    font-size:21px;
+}
+
+.affix
+{
+    top:60px;
+}
