--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -84,7 +84,7 @@
                                     <li ng-repeat="difficulty in difficultyChoices"><a href="#" class="small" data-value="{[{ difficulty.index }]}" tabIndex="-1"><input type="checkbox"/>&nbsp;{[{ difficulty.title }]}</a></li>
                                 </ul>
                             </div>
-                            <span style="color:white;"> Rikiuoti pagal </span>
+                            <span class="rateInfo"> Rikiuoti pagal </span>
                             <input type="button" id="dateButton" value="Datą" ng-click="sortByDate()">  </input>
                             <input type="button" id="ratingButton" value="Reitingą" ng-click="sortByRatings()">  </input>
                         </div>
