--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -9,7 +9,7 @@
                 <div class="col-md-12 col-sm-12">
                     <h1 class="home wow fadeInDown"> HOME <span class="homeSpan">COACH</span></h1>
                     {% if app.user is not null %}
-                        <a href="{{ path('app.createWorkout') }}" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">SUKURTI PROGRAMĄ</a>
+                        <a href="{{ path('app.createWorkout') }}" name="create" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">SUKURTI PROGRAMĄ</a>
                     {% else %}
                         <a href="/login" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.4s">PRISIJUNGTI</a>
                     {% endif %}
