--- a/src/AppBundle/Resources/views/Home/createWorkout.html.twig
+++ b/src/AppBundle/Resources/views/Home/createWorkout.html.twig
@@ -95,10 +95,13 @@
                     <div class="btn-group">
                         <button type="button" class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown"> Įranga <span class="caret"></span></button>
                         <ul class="dropdown-menu">
-                            <li><a href="#" class="small" data-value="Kamuolys" tabIndex="-1">{{ form_widget(form.equipment.0, {'attr':{'class':'checkbox'}}) }}&nbsp; Kamuolys</a></li>
+                            <li><a href="#" class="small" data-value="Jogos kamuolys" tabIndex="-1">{{ form_widget(form.equipment.0, {'attr':{'class':'checkbox'}}) }}&nbsp; Jogos kamuolys</a></li>
                             <li><a href="#" class="small" data-value="Dviratis" tabIndex="-1">{{ form_widget(form.equipment.1, {'attr':{'class':'checkbox'}}) }}&nbsp; Dviratis </a></li>
-                            <li><a href="#" class="small" data-value="Vienaratis" tabIndex="-1">{{ form_widget(form.equipment.2, {'attr':{'class':'checkbox'}}) }}&nbsp; Vienaratis </a></li>
-                            <li><a href="#" class="small" data-value="Vienaragis" tabIndex="-1">{{ form_widget(form.equipment.3, {'attr':{'class':'checkbox'}}) }}&nbsp; Vienaragis </a></li>
+                            <li><a href="#" class="small" data-value="Suoliukas" tabIndex="-1">{{ form_widget(form.equipment.2, {'attr':{'class':'checkbox'}}) }}&nbsp; Suoliukas </a></li>
+                            <li><a href="#" class="small" data-value="Skersinis" tabIndex="-1">{{ form_widget(form.equipment.3, {'attr':{'class':'checkbox'}}) }}&nbsp; Skersinis </a></li>
+                            <li><a href="#" class="small" data-value="Hanteliai" tabIndex="-1">{{ form_widget(form.equipment.4, {'attr':{'class':'checkbox'}}) }}&nbsp; Hanteliai </a></li>
+                            <li><a href="#" class="small" data-value="Štanga" tabIndex="-1">{{ form_widget(form.equipment.5, {'attr':{'class':'checkbox'}}) }}&nbsp; Štanga </a></li>
+                            <li><a href="#" class="small" data-value="Specialūs treniruokliai" tabIndex="-1">{{ form_widget(form.equipment.6, {'attr':{'class':'checkbox'}}) }}&nbsp; Specialūs treniruokliai </a></li>
                         </ul>
                     </div>
                     <div class="btn-group">
