adjusted minor settings

--- a/src/AppBundle/Resources/views/Home/showUser.html.twig
+++ b/src/AppBundle/Resources/views/Home/showUser.html.twig
@@ -94,7 +94,7 @@
     {% if weightForm is defined %}
         {{ form_start(weightForm) }}
             {{ form_errors(weightForm) }}
-            {{ form_row(weightForm.weight) }}
+            {{ form_row(weightForm.svoris) }}
         {{ form_end(weightForm) }}
 
         {% block graph %}
