--- a/src/AppBundle/Resources/views/Home/queryWorkout.html.twig
+++ b/src/AppBundle/Resources/views/Home/queryWorkout.html.twig
@@ -37,7 +37,7 @@
             <h1 class="number"> {{ workout.activations|length }} </h1>
         </div>
     </div>
-    <h1 class="description">{{ workout.title }} </h1>
+    <h1 class="description">{{ workout.title }} <span class="commentAuthor"> Autorius: <a href="/showProfile/{{ workout.creator.id }}"> {{ workout.creator.username }} </a></span> </h1>
     <div class="row">
         <div class="col-md-12">
             <p> {{ workout.description|nl2br }} </p>
@@ -86,7 +86,6 @@
     {% endif %}
     {% if app.user is not null and workout.userRating(app.user.id)==0 %}
         <h2 class="description"> Įvertinkite programą </h2>
-        Tavo ivertinimas: {{ workout.userRating(app.user.id) }}
         <br>
         {{ form_start(formRate, {'attr':{'id':'rating'}}) }}
         <div class="rating">
@@ -103,11 +102,11 @@
         {{ form_end(formRate) }}
         <br>
     {% endif %}
-    <div class="fb-like" data-href="http://homecoach.projektai.nfqakademija.lt/workouts/{{ workout.id }}" data-layout="standard" data-action="like" colorscheme="dark" data-show-faces="true" data-share="true"></div>
     {% if editForm is not null %}
         {{ form_start(editForm) }}
         {{ form_end(editForm) }}
     {% endif %}
+    <div class="fb-like" data-href="http://homecoach.projektai.nfqakademija.lt/workouts/{{ workout.id }}" data-layout="standard" data-action="like" colorscheme="dark" data-show-faces="true" data-share="true"></div>
     <h2 class="description"> Komentarai </h2>
     <ul style="margin-bottom:10px;" class="nav nav-tabs">
         <li><a data-toggle="tab" href="#menu1">Home Coach <span class="badge alert-info">{{ workout.comments|length }}</span> </a></li>
