--- a/src/AppBundle/Resources/views/Home/showUser.html.twig
+++ b/src/AppBundle/Resources/views/Home/showUser.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}
+    {{ user.username }}
+{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-md-4">
@@ -72,6 +74,7 @@
                             <p> Pasirinko <span class="badge alert-info">{{ workout.activations|length }}</span> </p>
                             <p>{{ workout.description[:150] }}</p>
                             <a href="../workouts/{{ workout.id }}" class="button">Daugiau</a>
+                            <a href="../editWorkout/{{ workout.id }}" class="button">Keisti</a>
                         </div>
                     {% endfor %}
                     </div>
