Graph in tab, other fixes

--- a/app/Resources/views/workoutTemplate.html.twig
+++ b/app/Resources/views/workoutTemplate.html.twig
@@ -46,7 +46,7 @@
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
     <script src="{{ asset('assets/jquery.rateyo.min.js') }}"></script>
     <script src="{{ asset('js/commentLengthControl.js') }}"></script>
-    <script src="{{ asset('js/ratings.js') }}"></script>
+    <script src="{{ asset('js/queryWorkout.js') }}"></script>
     <script src="{{ asset('js/facebookPlugin.js') }}"></script>
     <script>
         initAjaxForm();
