--- a/app/Resources/style/workoutDetailsStyle.sass
+++ b/app/Resources/style/workoutDetailsStyle.sass
@@ -1,120 +1,117 @@
 @import font
 
-$veryEasy: #09ff15
-$easy: #09d815
-$medium: #fffa3d
-$hard: #ff3026
-$veryHard: #c52821
-
 .center-block span
-  display: table-cell
-  vertical-align: middle
+    display: table-cell
+    vertical-align: middle
 
 .coloredStar:before
-  content: "\2605"
-  position: absolute
-  cursor: pointer
-  color: yellow
-
-.rating
-  unicode-bidi: bidi-override
-  direction: rtl
-  text-align: center
-  label
-    display: inline-block
-    position: relative
-    font-size: 50px
-  label:hover:before,label:hover ~ label:before
     content: "\2605"
     position: absolute
     cursor: pointer
     color: yellow
 
+.rating
+    unicode-bidi: bidi-override
+    direction: rtl
+    text-align: center
+    label
+        display: inline-block
+        position: relative
+        font-size: 55px
+    label:hover:before,label:hover ~ label:before
+        content: "\2605"
+        position: absolute
+        cursor: pointer
+        color: yellow
+
 .radio_item
-  display: none !important
+    display: none !important
 
 figure
-  width: 100%
-  margin: 0
-  text-align: center
-  padding: 0
+    width: 100%
+    margin: 0
+    text-align: center
+    padding: 0
 
 .description
-  font-family: Oswald
-  font-size: 50px
-  text-align: center
-  color: white
+    font-family: Oswald
+    font-size: 50px
+    text-align: center
+    color: white
 
 .form
-  background: rgba(19, 35, 47, 0.9)
-  padding: 40px
-  margin: 40px auto
-  font-size: 18px
-  border-radius: 4px
-  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3)
+    background: rgba(19, 35, 47, 0.9)
+    padding: 40px
+    margin: 40px auto
+    font-size: 18px
+    border-radius: 4px
+    box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3)
 
 body
-  background: #c1bdba
-  color: white
+    background: #c1bdba
+    color: white
 
 button
-  border: 0
-  outline: none
-  border-radius: 0
-  padding: 15px 0
-  font-size: 2rem
-  font-weight: 600
-  text-transform: uppercase
-  letter-spacing: .1em
-  background: #f5ca23
-  color: #ffffff
-  -webkit-transition: all 0.5s ease
-  transition: all 0.5s ease
-  -webkit-appearance: none
-  width: 100%
-  margin-top: 10px
-  border-radius: 5px
+    border: 0
+    outline: none
+    border-radius: 0
+    padding: 15px 0
+    font-size: 2rem
+    font-weight: 600
+    text-transform: uppercase
+    letter-spacing: .1em
+    background: #f5ca23
+    color: #ffffff
+    -webkit-transition: all 0.5s ease
+    transition: all 0.5s ease
+    -webkit-appearance: none
+    width: 100%
+    margin-top: 10px
+    border-radius: 5px
 
 .button:hover, .button:focus
-  background: #fcbe07
-  cursor: pointer
+    background: #fcbe07
+    cursor: pointer
 
 div.inline
-  float: left
+    float: left
 
 .clearBoth
-  clear: both
+    clear: both
 
 #form_comment::-moz-placeholder
-  color: black
-  font-family: Oswald
-  font-weight: 700
-  font-size: 23px
+    color: black
+    font-family: Oswald
+    font-weight: 700
+    font-size: 23px
 
 #form_comment:focus::-webkit-input-placeholder
-  color: transparent
+    color: transparent
 #form_comment:focus:-moz-placeholder
-  color: transparent  /* FF 4-18 */
+    color: transparent  /* FF 4-18 */
 #form_comment:focus::-moz-placeholder
-  color: transparent /* FF 19+ */
+    color: transparent /* FF 19+ */
 #form_comment:focus:-ms-input-placeholder
-  color: transparent  /* IE 10+ */
+    color: transparent  /* IE 10+ */
 
 .info
-  font-family: Oswald
-  font-size: 30px
-  text-align: center
-  color: white
-  margin: 0px
+    font-family: Oswald
+    font-size: 30px
+    text-align: center
+    color: white
+    margin: 0px
 
 .number
-  text-align: center
-  font-family: Jersey
-  font-size: 100px
+    text-align: center
+    font-family: Jersey
+    font-size: 100px
 
 .disabled
-  pointer-events: none
-  color: green
+    pointer-events: none
+    color: green
+
+#editForm_edit
+     margin-bottom: 10px
 
 
 
