--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -53,7 +53,7 @@
         <div ng-app="workoutApp" ng-controller="workoutsController">
 
             <div style="margin-top:45px;">
-                <input type="text" placeholder="Paieška pagal pavadinimą arba autorių" id="search" ng-change="searchInput(param)" ng-model="param.searchKey">
+                <input type="text" placeholder="Paieška pagal pavadinimą" id="search" ng-change="searchInput(param)" ng-model="param.searchKey">
             </div>
             <br/>
             <div class="container">
